Fix test by checking that new orders were created

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,5 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
-      - run: cargo test
+      - uses: foundry-rs/foundry-toolchain@v1
+      - run: anvil --fork-url 'https://eth.merkle.io' --fork-block-number 20920411 &
       - run: cargo clippy
+      # node should be up before running tests
+      - run: sleep 5
+      - run: cargo test
